# CGex2

./: .gitignore  CMakeLists.txt  README.md
config/: lighting_config.json
shaders/: bright_extract.frag  depth.vert  gaussian_blur.frag  hdr_composite.frag  model.frag  model.vert  point_depth.frag  point_depth.vert  ssao.frag  ssao_blur.frag  ssao_geometry.frag  ssao_geometry.vert
src/: main.cpp
src/collision/: AABB.cpp  AABB.h  CollisionPrimitives.cpp  CollisionPrimitives.h  DebugAabbDrawer.cpp  DebugAabbDrawer.h
src/core/: Application.cpp  Application.h  Camera.h  Transform.h
src/render/: BloomRenderer.cpp  BloomRenderer.h  HDRFramebuffer.cpp  HDRFramebuffer.h  LightManager.cpp  LightManager.h  Material.h  Mesh.cpp  Mesh.h  PointShadowMap.cpp  PointShadowMap.h  Renderer.cpp  Renderer.h  SSAORenderer.cpp  SSAORenderer.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  Texture.cpp  Texture.h
src/scene/: Model.cpp  Model.h  Scene.cpp  Scene.h
